add favicon-related images

--- a/public/index.html
+++ b/public/index.html
@@ -1,16 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+   
+    <!-- icon code for other platforms -->
+    <link rel="apple-touch-icon" sizes="180x180" href="%PUBLIC_URL%/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="%PUBLIC_URL%/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="%PUBLIC_URL%/favicon-16x16.png">
+    <link rel="manifest" href="%PUBLIC_URL%/site.webmanifest">
+    <link rel="mask-icon" href="%PUBLIC_URL%/safari-pinned-tab.svg" color="#5bbad5">
+    <meta name="msapplication-TileColor" content="#da532c">
+    <meta name="theme-color" content="#ffffff">
+
+    <!-- most stuff starts here -->
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
+    <!-- <meta name="theme-color" content="#000000" /> -->
     <meta
       name="description"
       content="Mobile schedule for TouhouFest 2024"
     />
-    <!-- TODO replace with touhoufest 192 icon -->
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
 
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -30,6 +39,24 @@
     -->
 
     <title>TouhouFest 2024 Schedule</title>
+
+    <!-- facebook meta tags -->
+    <meta property="og:url"                 content="https://kir12.github.io/touhoufest-webapp" />
+    <meta property="og:title"               content="TouhouFest 2024 Schedule" />
+    <meta property="og:description"         content="Mobile schedule for TouhouFest 2024" />
+    <meta property="og:site_name"           content="TouhouFest 2024 Schedule" />
+    <meta property="og:image"               content="http://www.example.com/image.jpg" />
+    <meta property="og:type"                content="website" /> <!-- website is deafult -->
+    <meta property="og:locale"              content="en_US" />   <!-- en_US is deafult -->
+  
+    <meta name="twitter:card"               content="TouhouFest 2024 Schedule">
+    <meta name="twitter:site"               content="@TouhouFest">
+
+    <!-- You don't need to include these if you have OpenGraph tags -->
+    <meta name="twitter:title"              content="TouhouFest 2024 Schedule">
+    <meta name="twitter:description"        content="Mobile schedule for TouhouFest 2024">
+    <meta name="twitter:image"              content="http://www.example.com/image.jpg">
+
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
