--- a/public/index.html
+++ b/public/index.html
@@ -45,7 +45,7 @@
     <meta property="og:title"               content="TouhouFest 2024 Schedule" />
     <meta property="og:description"         content="Mobile schedule for TouhouFest 2024" />
     <meta property="og:site_name"           content="TouhouFest 2024 Schedule" />
-    <meta property="og:image"               content="http://www.example.com/image.jpg" />
+    <meta property="og:image"               content="http://kir12.github.io/touhoufest-webapp/android-chrome-384x384.png" />
     <meta property="og:type"                content="website" /> <!-- website is deafult -->
     <meta property="og:locale"              content="en_US" />   <!-- en_US is deafult -->
   
@@ -55,7 +55,7 @@
     <!-- You don't need to include these if you have OpenGraph tags -->
     <meta name="twitter:title"              content="TouhouFest 2024 Schedule">
     <meta name="twitter:description"        content="Mobile schedule for TouhouFest 2024">
-    <meta name="twitter:image"              content="http://www.example.com/image.jpg">
+    <meta name="twitter:image"              content="http://kir12.github.io/touhoufest-webapp/android-chrome-384x384.png">
 
   </head>
   <body>
